# sfmlteste

./: .gitignore  CMakeLists.txt  README.md  generate_compile_commands.bat  installSFML.sh  main  main.cpp  run.sh
src/: main.cpp
